--- a/config.example.json
+++ b/config.example.json
@@ -7,12 +7,13 @@
   "_AI_MODELS": "Standardisierte AI Modelle - für alle PCs gleich",
   "vision_model": "llava:7b",
   "text_model": "llama3.1:8b",
+  "embedding_model": "embeddinggemma",
+  "embedding_provider": "ollama",
   "use_vision_analysis": true,
   "use_semantic_boundaries": true,
   "chunking_strategy": "intelligent",
   "max_chunk_size": 600,
   "min_chunk_size": 200,
-  "embedding_model": "all-MiniLM-L6-v2",
   "ollama_base_url": "http://localhost:11434",
   
   "_DATABASE_CONFIG": "Diese Werte sind für ALLE PCs identisch - NIEMALS ändern!",
