📁 Complete manufacturer directory structure
- Added comprehensive folder structure for all major printer manufacturers
- Created README.md files for each manufacturer with model guidelines
- Updated .gitignore to preserve directory structure while excluding content files
- Supports: Brother, Canon, Epson, HP, Kyocera, Lexmark, OKI, Ricoh, Samsung, Sharp, Xerox
- Directory structure will be preserved when cloning repository

--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,18 @@ PIPFILE.lock
 # Config Files (Security)
 config.json
 
-# Documents
+# Documents (Keep structure, exclude content)
 *.pdf
 *.csv
 *.PDF
 *.CSV
 *.pfdz
 *.PDFZ
-/Documents/*/*.json
+Documents/**/*.json
+Documents/**/*.pdf
+Documents/**/*.csv
+Documents/**/*.PDF
+Documents/**/*.CSV
 
 # Development
 .vscode/
