Vereinfache Konfigurationsmanagement: Nur Umgebungsvariablen für sensible Daten

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # AI-Enhanced PDF Processing System - Environment Variables
 # Kopiere diese Datei zu .env und fülle die Werte aus
 
+# ======= ERFORDERLICHE KONFIGURATION =======
+
 # Supabase Konfiguration
 SUPABASE_URL=https://your-supabase-url.supabase.co
 SUPABASE_KEY=your-supabase-key
@@ -12,5 +14,27 @@ R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
 R2_BUCKET_NAME=your-r2-bucket-name
 R2_PUBLIC_URL=your-r2-public-url
 
-# Ollama Konfiguration (optional)
+# ======= OPTIONALE KONFIGURATION =======
+
+# Ollama Konfiguration
 OLLAMA_BASE_URL=http://localhost:11434
+EMBEDDING_MODEL=embeddinggemma
+
+# Verarbeitungsoptionen
+VISION_ENABLED=true
+CHUNK_SIZE=500
+CHUNK_OVERLAP=100
+MAX_CHUNK_SIZE=600
+MIN_CHUNK_SIZE=200
+CHUNKING_STRATEGY=intelligent
+PARALLEL_WORKERS=8
+BATCH_SIZE=150
+
+# Hardware-Beschleunigung
+USE_GPU_ACCELERATION=true
+USE_METAL_ACCELERATION=true
+GPU_MEMORY_FRACTION=0.7
+
+# Verzeichnisse
+DOCUMENTS_PATH=/Users/username/Docker/PDF-Extractor/Documents
+MEMORY_DIR=/Users/username/Docker/PDF-Extractor/MEMORY
