Windows-Kompatibilität verbessert: Pfadbehandlung angepasst, Windows-Installationsanleitung hinzugefügt, Abhängigkeiten dokumentiert

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,10 @@ USE_GPU_ACCELERATION=true
 USE_METAL_ACCELERATION=true
 GPU_MEMORY_FRACTION=0.7
 
-# Verzeichnisse
-DOCUMENTS_PATH=/Users/username/Docker/PDF-Extractor/Documents
-MEMORY_DIR=/Users/username/Docker/PDF-Extractor/MEMORY
+# Verzeichnisse - Bitte passen Sie diese an Ihr Betriebssystem an
+# Für macOS/Linux:
+# DOCUMENTS_PATH=/Users/username/Docker/PDF-Extractor/Documents
+# MEMORY_DIR=/Users/username/Docker/PDF-Extractor/MEMORY
+# Für Windows:
+# DOCUMENTS_PATH=C:\\Users\\username\\Docker\\PDF-Extractor\\Documents
+# MEMORY_DIR=C:\\Users\\username\\Docker\\PDF-Extractor\\MEMORY
